--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
     background-image: url('./images/gilmore\ girls.avif');
     /* Replace 'your-background-image.jpg' with the actual path to your image */
     background-size: cover;
