--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ footer {
     padding: 1em;
     background-color: #333;
     color: #fff;
-    position: fixed;
+    position: center;
     bottom: 0;
     width: 100%;
 }
