--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
 body {
     font-family: 'Arial', sans-serif;
-    margin: 0;
-    /* padding: 0; */
     background-image: url('./images/gilmore\ girls.avif');
-    /* Replace 'your-background-image.jpg' with the actual path to your image */
     background-size: cover;
-    /* Adjust to cover the entire viewport */
     background-position: center;
-    /* Center the background image */
     background-repeat: no-repeat;
-    /* Prevent the background image from repeating */
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    transition: background-color 0.3s ease-in-out;
+    /* Adding a transition effect */
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 80%;
+    }
+}
+container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
+    transition: box-shadow 0.3s ease-in-out; /* Adding a transition effect */
+}
+.container:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Adding a subtle box-shadow on hover */
 }
 
 header {
