--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ img {
 footer {
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     color: #fff;
     position: fixed;
     bottom: 0;
