--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #f48106;
     text-align: center;
     padding: 1em;
 }
